# aoc

./: .gitignore  .gitmodules  LICENSE  README.md  aoc.opam  data  dune-project  dune-workspace  problems
lib/: ansi.ml  ansi.mli  dune  grid.ml  grid.mli  iter.ml  iter.mli  iter2.ml  solution.ml  solution.mli  utils.ml  utils.mli
solutions/: dune
solutions/aoc2015/: s01.ml  s02.ml  s03.ml  s04.ml  s05.ml  s06.ml  s07.ml  s08.ml  s09.ml  s10.ml  s11.ml  s12.ml  s13.ml  s14.ml  s15.ml  s16.ml  s17.ml  s18.ml  s19.ml  s20.ml  s21.ml  s22.ml  s23.ml  s24.ml  s25.ml
solutions/aoc2016/: s01.ml  s02.ml  s03.ml  s04.ml  s05.ml  s06.ml  s07.ml  s08.ml  s09.ml  s10.ml  s11.ml  s12.ml  s13.ml  s14.ml  s15.ml  s16.ml  s17.ml  s18.ml  s19.ml  s20.ml  s21.ml  s22.ml  s23.ml  s24.ml  s25.ml
solutions/aoc2017/: s01.ml  s02.ml  s03.ml  s04.ml  s05.ml  s06.ml  s07.ml  s08.ml  s09.ml  s10.ml  s11.ml  s12.ml  s13.ml  s14.ml  s15.ml  s16.ml  s17.ml  s18.ml  s19.ml  s20.ml  s21.ml  s22.ml  s23.ml  s24.ml  s25.ml
solutions/aoc2018/: s01.ml  s02.ml  s03.ml  s04.ml  s05.ml  s06.ml  s07.ml  s08.ml  s09.ml  s10.ml  s11.ml  s12.ml  s13.ml  s14.ml  s15.ml  s16.ml  s17.ml  s18.ml  s19.ml  s20.ml  s21.ml  s22.ml  s23.ml  s24.ml  s25.ml
solutions/aoc2019/: dune  intcode.ml  s01.ml  s02.ml  s03.ml  s04.ml  s05.ml  s06.ml  s07.ml  s08.ml  s09.ml  s10.ml  s11.ml  s12.ml  s13.ml  s14.ml  s15.ml  s16.ml  s17.ml  s18.ml  s19.ml  s20.ml  s21.ml  s22.ml  s23.ml  s24.ml  s25.ml
solutions/aoc2020/: s01.ml  s02.ml  s03.ml  s04.ml  s05.ml  s06.ml  s07.ml  s08.ml  s09.ml  s10.ml  s11.ml  s12.ml  s13.ml  s14.ml  s15.ml  s16.ml  s17.ml  s18.ml  s19.ml  s20.ml  s21.ml  s22.ml  s23.ml  s24.ml  s25.ml
solutions/aoc2021/: s01.ml  s02.ml  s03.ml  s04.ml  s05.ml  s06.ml  s07.ml  s08.ml  s09.ml  s10.ml  s11.ml  s12.ml  s13.ml  s14.ml  s15.ml  s16.ml  s17.ml  s18.ml  s19.ml  s20.ml  s21.ml  s22.ml  s23.ml  s24.ml  s25.ml
solutions/aoc2022/: s01.ml  s02.ml  s03.ml  s04.ml  s05.ml  s06.ml  s07.ml  s08.ml  s09.ml  s10.ml  s11.ml  s12.ml  s13.ml  s14.ml  s15.ml  s16.ml  s17.ml  s18.ml  s19.ml  s20.ml  s21.ml  s22.ml  s23.ml  s24.ml  s25.ml
solutions/aoc2023/: s01.ml  s02.ml  s03.ml  s04.ml  s05.ml  s06.ml  s07.ml  s08.ml  s09.ml  s10.ml  s11.ml  s12.ml  s13.ml  s14.ml  s15.ml  s16.ml  s17.ml  s18.ml  s19.ml  s20.ml  s21.ml  s22.ml  s23.ml  s24.ml  s25.ml
solutions/aoc2024/: dune  s01.ml  s02.ml  s03.ml  s03_ocamllex.mll  s04.ml  s05.ml  s06.ml  s07.ml  s08.ml  s09.ml  s10.ml  s11.ml  s12.ml  s13.ml  s14.ml  s15.ml  s16.ml  s17.ml  s18.ml  s19.ml  s20.ml  s21.ml  s22.ml  s23.ml  s24.ml  s25.ml
solutions/aoc2025/: s01.ml  s02.ml  s03.ml  s04.ml  s05.ml  s06.ml  s07.ml  s08.ml  s09.ml  s10.ml  s11.ml  s12.ml
solutions/template/: dune  template.ml
